fix: body overflow + scrollbar styles

--- a/components/Swiper/Swiper.module.scss
+++ b/components/Swiper/Swiper.module.scss
@@ -14,7 +14,7 @@
   transform: translate(0, -50%);
   width: 9px;
   height: 75vh;
-  top: 50%;
+  top: 45%;
   right: 20px;
 
   &::before {
@@ -66,5 +66,6 @@
 
   @screen lg {
     right: 60px;
+    top: 50%;
   }
 }
