--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,3 +1,8 @@
+html,
 body {
-  @apply bg-gray-100 w-full h-screen;
+  @apply bg-gray-100 overflow-hidden w-full h-screen;
+}
+
+#__next {
+  @apply overflow-hidden;
 }
